# BreezeEnhanced

./: CMakeLists.txt  ChangeLog  NEWS  README.md  breeze.h  breeze.json  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezeenhanced.json  breezeexceptionlist.cpp  breezeexceptionlist.h  breezesettingsdata.kcfg  breezesettingsprovider.cpp  breezesettingsprovider.h  breezesizegrip.cpp
config/: CMakeLists.txt  breezeconfigwidget.cpp  breezeconfigwidget.h  breezedetectwidget.cpp  breezedetectwidget.h  breezeenhancedconfig.desktop  breezeexceptiondialog.cpp  breezeexceptiondialog.h  breezeexceptionlistwidget.cpp  breezeexceptionlistwidget.h  breezeexceptionmodel.h  breezeitemmodel.cpp  breezeitemmodel.h  breezelistmodel.h  kcm_breezeenhanced.cpp  kcm_breezeenhanced.json
config/ui/: breezeconfigurationui.ui  breezeexceptiondialog.ui
libbreezecommon/: CMakeLists.txt  breezeboxshadowrenderer.cpp  breezeboxshadowrenderer.h
